--- a/src/app/characters/cards/cards.component.html
+++ b/src/app/characters/cards/cards.component.html
@@ -1,1 +1,6 @@
-<p>cards works!</p>
+<div class="content">
+  <h1>{{ character.name }}</h1>
+  <img [src]="character.image" alt="imagen del personaje" class="image"/>
+  <p>{{ character.status }}, {{ character.species }}, {{ character.gender }}</p>
+  <button>Locación</button>
+</div>
