--- a/src/app/characters/cards/cards.component.html
+++ b/src/app/characters/cards/cards.component.html
@@ -1,6 +1,19 @@
 <div class="content">
-  <h1>{{ character.name }}</h1>
-  <img [src]="character.image" alt="imagen del personaje" class="image"/>
-  <p>{{ character.status }}, {{ character.species }}, {{ character.gender }}</p>
-  <button>Locación</button>
+  <div class="info">
+    <h1>{{ character.name }}</h1>
+    <img [src]="character.image" alt="imagen del personaje" class="image" />
+    <p>
+      {{ character.status }}, {{ character.species }}, {{ character.gender }}
+    </p>
+    <button (click)="viewLocation(character.origin.url)">Origen</button>
+  </div>
 </div>
+
+<!-- Modal -->
+<app-modal
+  *ngIf="isModalOpen"
+  (confirm)="onModalConfirm()"
+  (cancel)="onModalCancel()"
+  [id]="originId"
+>
+</app-modal>
