--- a/src/app/characters/view-cards/view-cards.component.html
+++ b/src/app/characters/view-cards/view-cards.component.html
@@ -2,3 +2,10 @@
   <app-cards [id]="2" />
   <app-cards [id]="3" />
 </div>
+<div class="content">
+  <div *ngFor="let id of characterIds">
+    
+    <p>Character ID: {{ id }}</p>
+  </div>
+</div>
+
